--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.208",
+    "@iconify/tailwind": "^1.0.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
