--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "flowbite": "^2.3.0",
     "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.5",
