--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
+    "vue-select": "^4.0.0-beta.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
